# VTK-OSPRay-Playground

./: .gitignore  FILES  README.md  env.sh  go.sh  osprayFunctionTrace.gdbinit  vtkMPIErrorBacktrace.gdbinit  vtkOSPRay.gdbinit
src/: CMakeLists.txt  main.cpp  vtkPDistributedDataFilterExample.cpp
tools/docker/: Dockerfile
